[workspace]
resolver = "2"
members = [
    "bytecode",
    "compiler",
    "logging",
    "proc_macros",
    "vm",
    "yuvakriti"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Akash Yadav <contact@itsaky.com>"]
rust-version = "1.77.1"
homepage = "https://github.com/itsaky/yuvakriti"
repository = "https://github.com/itsaky/yuvakriti"
license = "GPL-3"
keywords = ["programming-language", "virtual-machine", "parser"]
categories = ["compilers"]

[profile.optimize]
inherits = "release"
strip = true         # Automatically strip symbols from the binary.
lto = true           # Link-time optimization.
opt-level = 3        # Optimization level 3.
codegen-units = 1    # Maximum size reduction optimizations.

[profile.size]
inherits = "optimize"
opt-level = "s"       # Optimize for size.

[profile.profile]
inherits = "optimize"
strip = false

[workspace.dependencies]
log = "0.4"
colored = "2"
bytecode = { path = "bytecode" }
compiler = { path = "compiler" }
logging = { path = "logging" }
proc_macros =  { path = "proc_macros" }
vm = { path = "vm" }
