[workspace]
resolver = "2"
members = [
    "compiler",
    "proc_macros",
    "util",
    "vm",
    "yuvakriti"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "YuvaKriti - an experimental, dynamically typed, compiled programming language."
authors = ["Akash Yadav <contact@itsaky.com>"]
rust-version = "1.77.1"
homepage = "https://github.com/itsaky/yuvakriti"
repository = "https://github.com/itsaky/yuvakriti"
license = "GPL-3"
keywords = ["programming-language", "virtual-machine", "parser"]
categories = ["compilers"]

[profile.optimize]
inherits = "release"
strip = true         # Automatically strip symbols from the binary.
lto = true           # Link-time optimization.
opt-level = 3        # Optimization level 3.
codegen-units = 1    # Maximum size reduction optimizations.

[profile.size]
inherits = "optimize"
opt-level = "s"       # Optimize for size.

[profile.profile]
inherits = "optimize"
strip = false

[workspace.dependencies]
log = "0.4"
stderrlog = "0.6.0"
colored = "2"
syn = "2.0.58"
quote = "1.0.35"
proc-macro2 = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
compiler = { path = "compiler" }
proc_macros =  { path = "proc_macros" }
util = { path = "util" }
vm = { path = "vm" }
