[package]
name = "bytecode"
description = "API for working with YuvaKriti Bytecode"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
compiler.workspace = true
clap.workspace = true
proc_macros.workspace = true
util.workspace = true