[package]
name = "vm"
description = "The virtual machine implementation for the YuvaKriti Language"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
compiler.workspace = true
log.workspace = true
clap.workspace = true
proc_macros.workspace = true
util.workspace = true
paste.workspace = true
stderrlog.workspace = true