[package]
name = "yuvakriti"
description = "The YuvaKriti Language"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytecode.workspace = true
compiler.workspace = true
logging.workspace = true
vm.workspace = true
