[package]
name = "yuvakriti"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
compiler.workspace = true
logging.workspace = true
vm.workspace = true
log.workspace = true
util.workspace = true